--- a/juniortech/package.json
+++ b/juniortech/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.7",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
